fix: set column layout on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -113,6 +113,9 @@
 	.card {
 		width: 260px;
 	}
+	.row {
+		flex-direction: column;
+	}
 }
 
 @media (prefers-color-scheme: light) {
